--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-dotenv==1.0.0
-openai==0.27.8
+openai==0.27.9
 ipython==8.14.0
 Flask==2.3.3
 virtualenv==20.24.3
@@ -8,3 +8,7 @@ spotipy==2.23.0
 nomic==2.0.7
 numpy==1.25.2
 tenacity==8.2.3
+matplotlib==3.7.2
+plotly==5.16.1
+scipy ==1.11.2
+scikit-learn==1.3.0
